# BurnYourPC

./: .gitignore  Burner.cpp  Burner.h  CMakeLists.txt  CPUBurner.cpp  CPUBurner.h  GPUBurner.cpp  GPUBurner.h  README.md  main.cpp  utils.cpp  utils.h
ExtLibs/: README.md
ExtLibs/OpenCL-ICD-Loader/: .gitignore  README.md
ExtLibs/OpenCL-ICD-Loader/inc/CL/: cl_version.h
ExtLibs/OpenCL-ICD-Loader/loader/: icd_platform.h
ExtLibs/boost_1_76_0/: README.md
gpu_burner/: GPUBurnerTask.cpp  GPUBurnerTask.h  GPUPiDoubleBurner.cpp  GPUPiDoubleBurner.h  GPUPiFloatBurner.cpp  GPUPiFloatBurner.h
